# RustyCowsay

./: Cargo.toml  README.md  build.rs  install.sh  rusty-cowsay.bash
cows/: bong.cow  bud-frogs.cow  bunny.cow  cheese.cow  cower.cow  daemon.cow  default.cow  dragon-and-cow.cow  dragon.cow  elephant-in-snake.cow  elephant.cow  eyes.cow  flaming-sheep.cow  ghostbusters.cow  head-in.cow  hellokitty.cow  kiss.cow  kitty.cow  koala.cow  kosh.cow  mora.cow  www.cow
src/: cli.rs  main.rs
